--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGDODB_URL=mongodb://mongodb:27017/dvinyl # MongoDB connection URL (you can change if needed)
+MONGODB_URL=mongodb://mongodb:27017/dvinyl # MongoDB connection URL (you can change if needed)
 
 PASSJWT=SomeComplexPassword
 SESSION_SECRET=AnotherComplexSecret
