--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ MONGODB_URL=mongodb://mongodb:27017/dvinyl # MongoDB connection URL (you can cha
 PASSJWT=SomeComplexPassword
 SESSION_SECRET=AnotherComplexSecret
 
-PROD=false # Change to true in production
+# HTTPS Configuration
+PROD=false # Change to true ONLY if you use HTTPS. If not, leave as false.
 
 # DVinyl
 VINYL_PORT=3099 # Port for the DVinyl service
